added button to remove contribution
cf #40

The filename is now stored in the contribution table.

If the filename is not empty the form to submit the contribution
is hidden and a thanks message is displayed.

--- a/src/AFUP/HaphpyBirthdayBundle/Resources/translations/messages.fr.yml
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/translations/messages.fr.yml
@@ -38,6 +38,10 @@ step:
         contributions_examples: Voir des exemples de contributions
     submit:
         title: Envoie ta contribution
+    submitted:
+        remove_button: Supprimer ma contribution
+        thanks: Vous avez déjà contribué, merci !
+
 
 content:
     celebrating:
