--- a/src/AFUP/HaphpyBirthdayBundle/Resources/translations/messages.en.yml
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/translations/messages.en.yml
@@ -38,6 +38,9 @@ step:
         contributions_examples: See some contributions examples
     submit:
         title: Submit your contribution
+    submitted:
+        remove_button: Remove my contribution
+        thanks: You have already contributed, thanks !
 
 content:
     celebrating:
