Hide contribution form when limit date is over

--- a/src/AFUP/HaphpyBirthdayBundle/Resources/translations/messages.en.yml
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/translations/messages.en.yml
@@ -2,6 +2,7 @@ haphpy:
     punchline: Add your contribution to the commemorative movie celebrating 20 years of PHP
     date_format:
         full: 'd/m/Y, H:i:s T'
+        date: 'd/m/Y'
 
 head:
     title:       HaPHPy Birthday
@@ -55,22 +56,22 @@ index:
     introduction: >
         <p>HaPHPy Birthday is a collaborative movie <span %highlight1%>celebrating 20 years of
         the PHP language</span> and its users involvement.</p>
-        <p>Before the 30th of October, <span %highlight2%>upload a very short video</span>
+        <p>Before the %limit_date%, <span %highlight2%>upload a very short video</span>
         or picture showing how much you love PHP or its community. Media can be selfies, placards,
         group photos, self expression, fun pics…<br />anything imaginable and positive.</p>
         <p>Eventually, people contributions will be <span %highlight3%>gathered
         in a short mosaic movie</span> released under a Creative&nbsp;Commons&nbsp;Licence.</p>
 
-    authentication:
-        github:
-            button:
-                label: GitHub Authentification
-        twitter:
-            button:
-                label: Twitter Authentification
-        facebook:
-            button:
-                label: Facebook Authentification
+    time_over:
+        title:    Contribution time is over!
+        editing:  Uploading a contribution was possible until the %limit_date%. We are now editing the final movie.
+        premiere: >
+            The premiere will be held during the opening keynote of the
+            <a href="http://forumphp.org">Forum&nbsp;PHP</a>, on the %premiere_date%.
+        release: >
+            The collaborative movie will be released straight after the premiere on <a href="https://www.youtube.com/user/afupPHP">
+            afup's YouTube channel</a>.
+            It will be visible on this awesome website too. 😜
 
     examples:
         title:            Examples of media that can be part of the final movie
@@ -85,8 +86,8 @@ index:
 
 form:
     credit_wanted:
-        yes:    Yes, I want my name to appear in the video credits and on this website contributors list
-        no:     No, I prefer to stay anonymous
+        yes:    Yes, I want my name to appear in the video credits and on this website contributors list.
+        no:     No, I prefer to stay anonymous.
         choose: Do you want to be credited?
     submit:
         label: send
