--- a/src/AFUP/HaphpyBirthdayBundle/Resources/translations/messages.fr.yml
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/translations/messages.fr.yml
@@ -1,5 +1,5 @@
 haphpy:
-    punchline: Ajoutez votre contribution à la vidéo collaborative célébrant 20 ans de PHP
+    punchline: Participez à la vidéo collaborative célébrant 20 ans de PHP
     date_format:
         full: 'd/m/Y, H:i:s T'
         date: 'd/m/Y'
