--- a/src/AFUP/HaphpyBirthdayBundle/Resources/translations/messages.es.yml
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/translations/messages.es.yml
@@ -1,5 +1,5 @@
 haphpy:
-    punchline: Add your contribution to the commemorative movie celebrating 20 years of PHP
+    punchline: Add your contribution to the collaborative movie celebrating 20 years of PHP
     date_format:
         full: 'd/m/Y, H:i:s T'
         date: 'd/m/Y'
