--- a/src/AFUP/HaphpyBirthdayBundle/Resources/translations/messages.en.yml
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/translations/messages.en.yml
@@ -199,6 +199,11 @@ about:
             class="differ">Code Galaxies Vizualization</a>.
         fanzutti:  Contribution examples with the help of <a href="http://www.florafanzutti.com" class="differ">Flora Fanzutti</a>.
 
+# Contribution page
+public_contribution:
+    title: A contribution by %name%
+    contributor: Contributed by <span class="fa haphpy-icon-%authProvider%"></span> %identifier%
+
 footer:
     github:       GitHub repository
     by_community: Made by the PHP community with <span class="fa fa-heart"></span>
