--- a/src/AFUP/HaphpyBirthdayBundle/Resources/translations/messages.fr.yml
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/translations/messages.fr.yml
@@ -210,6 +210,7 @@ about:
 # Contribution page
 public_contribution:
     title: Une contribution de %name%
+    punchline:   La vidéo collaborative célébrant 20 ans de PHP
     contributor: Contribué par <span class="fa haphpy-icon-%authProvider%"></span> %identifier%
 
 footer:
