--- a/src/AFUP/HaphpyBirthdayBundle/Resources/translations/messages.es.yml
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/translations/messages.es.yml
@@ -185,7 +185,7 @@ about:
                 <p>El proyecto tiene una cuenta de Twitter:
                 <a href="https://twitter.com/haphpy20" class="differ">@haphpy20</a>.</p>
                 <p>No dudes en compartir el proyecto con tus amigos así como en redes sociales.</p>
-                <p>Hashtag: #haPHPy20</p>
+                <p>Hashtag: #20YearsOfPHP</p>
 
     thanks:
         title: Reconocimientos
@@ -208,3 +208,12 @@ public_contribution:
 footer:
     github: Repositorio en GitHub
     by_community: Hecho por la comunidad de PHP con <span class="fa fa-heart"></span>
+
+twitter_card:
+    contribution:
+        title: Another contribution to the HaPHPy Birthday movie.
+        description: >
+            Haphpy Birthday: The collaborative movie celebrating 20 years PHP. Before the 31st of October,
+            people can upload a very short media showing love to PHP or its community. Uploaded media can be
+            selfies, placards, group photos, fun pics… Eventually, medias will be gathered in a short mosaic
+            movie released under a Creative Commons Licence.
